tick/rust_bindings/target/debug/build/tick-6d7643a69c573ce4/out/bindings.rs

/* automatically generated by rust-bindgen 0.72.0 */

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tick_form {
    _unused: [u8; 0],
}
pub type tick_form_t = *mut tick_form;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tick_reducer {
    _unused: [u8; 0],
}
pub type tick_reducer_t = *mut tick_reducer;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tick_square_state {
    _unused: [u8; 0],
}
pub type tick_square_state_t = *mut tick_square_state;
unsafe extern "C" {
    pub fn tick_init();
}
unsafe extern "C" {
    pub fn tick_form_create() -> tick_form_t;
}
unsafe extern "C" {
    pub fn tick_form_destroy(form: tick_form_t);
}
unsafe extern "C" {
    pub fn tick_form_generator(discriminant_hex: *const ::std::os::raw::c_char) -> tick_form_t;
}
unsafe extern "C" {
    pub fn tick_form_get_a(form: tick_form_t) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn tick_form_get_b(form: tick_form_t) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn tick_form_get_c(form: tick_form_t) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn tick_form_set_a(form: tick_form_t, hex_value: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn tick_form_set_b(form: tick_form_t, hex_value: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn tick_form_set_c(form: tick_form_t, hex_value: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn tick_reducer_create() -> tick_reducer_t;
}
unsafe extern "C" {
    pub fn tick_reducer_destroy(reducer: tick_reducer_t);
}
unsafe extern "C" {
    pub fn tick_reducer_reduce(reducer: tick_reducer_t, form: tick_form_t);
}
unsafe extern "C" {
    pub fn tick_square_state_create(pairindex: ::std::os::raw::c_int) -> tick_square_state_t;
}
unsafe extern "C" {
    pub fn tick_square_state_destroy(state: tick_square_state_t);
}
unsafe extern "C" {
    pub fn tick_repeated_square_fast(
        state: tick_square_state_t,
        form: tick_form_t,
        discriminant_hex: *const ::std::os::raw::c_char,
        iterations: u64,
    ) -> u64;
}
unsafe extern "C" {
    pub fn tick_nudupl_form(
        result: tick_form_t,
        input: tick_form_t,
        discriminant_hex: *const ::std::os::raw::c_char,
    );
}
